# selfness

./: .flake8  Gemfile  LICENSE  README.md  pyproject.toml  slife.py  slife.rb
ruby-slife/: README.md  slife.rb
self-harmonize/: harmonize.rb
