[tool.poetry]
name = "selfness"
version = "0.1.0"
description = "A simulation of mold behavior"
authors = ["Ernest <ernest@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3"
numpy = "^1"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
